# zxing-cpp

./: .travis.yml  CMakeLists.txt  README.md  build-ios.sh  source_files.cmake
cli/src/: ImageReaderSource.cpp
cmake/: zxing-config.cmake.in
cmake/FindModules/: FindIconv.cmake
core/src/zxing/: BarcodeFormat.h  DecodeHints.cpp  DecodeHints.h  LuminanceSource.h  MultiFormatReader.cpp  ResultQR.cpp  ResultQR.h
core/src/zxing/common/: CharacterSetECI.cpp  CharacterSetECI.h  StringUtils.cpp
core/src/zxing/common/detector/: MonochromeRectangleDetector.cpp
core/src/zxing/common/reedsolomon/: GenericGFPoly.cpp
core/src/zxing/datamatrix/decoder/: DecodedBitStreamParser.cpp
core/src/zxing/datamatrix/detector/: Detector.cpp
core/src/zxing/multi/: GenericMultipleBarcodeReader.cpp
core/src/zxing/multi/qrcode/: QRCodeMultiReader.cpp
core/src/zxing/multi/qrcode/detector/: MultiFinderPatternFinder.cpp
core/src/zxing/oned/: Code128Reader.cpp  Code39Reader.cpp  Code93Reader.cpp  OneDReader.cpp  UPCEANReader.cpp  UPCEANReader.h  UPCEReader.cpp
core/src/zxing/pdf417/decoder/: Decoder.h
core/src/zxing/pdf417/detector/: LinesSampler.cpp  LinesSampler.h
core/src/zxing/qrcode/: QRCodeReader.cpp  QRCodeReader.h
core/src/zxing/qrcode/decoder/: DecodedBitStreamParser.cpp
opencv-cli/src/: main.cpp
opencv/src/zxing/: MatSource.cpp  MatSource.h
tests/: test.sh
